--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Newspaper Puzzles</string>
+    <string name="app_name">Puzzle Solver</string>
 
     <string name="goFigureTitle">GoFigure</string>
     <string name="emptyInput">Enter Numbers above</string>
