Add CLEAR button to GoFigure

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
 
     <string name="equal">=</string>
     <string name="solve">Solve</string>
-    <string name="blank">    </string>
+    <string name="clear">Clear</string>
+    <string name="blank"> </string>
 </resources>
