Add Puzzle selection option on MainActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="goFigureTitle">GoFigure</string>
     <string name="emptyInput">Enter Numbers above</string>
 
+    <string name="sudokuTitle">Sudoku</string>
+
     <string name="equal">=</string>
     <string name="solve">Solve</string>
     <string name="clear">Clear</string>
